Login integrado com a API em NestJS e outros ajustes

--- a/src/app/bolao/bolao.component.html
+++ b/src/app/bolao/bolao.component.html
@@ -3,22 +3,13 @@
 <br/>
 <br/>
 <div class="content">
-  <div class="row group">
+  <div class="row group" *ngFor="let match of matches">
     <div class="col-md-12">
-      <h1>Grupo A</h1>
+      <h1>{{match[0]?.group}}</h1>
     </div>
     <hr>
-    <div class="col-md-12" *ngFor="let matchGroupA of matchesGroupA">
-      <app-match [match]="matchGroupA"></app-match>
-    </div>
-  </div>
-  <div class="row group">
-    <div class="col-md-12">
-      <h1>Grupo B</h1>
-    </div>
-    <hr>
-    <div class="col-md-12" *ngFor="let matchGroupB of matchesGroupB">
-      <app-match [match]="matchGroupB"></app-match>
+    <div class="col-md-12" *ngFor="let matchGroup of match">
+      <app-match [match]="matchGroup"></app-match>
     </div>
   </div>
 </div>
