--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,11 +20,9 @@
       </svg>
     </a>
   </div>
-  <br/>
-  <br/>
-  <br/>
-  <div>
-    <a href="grupos">Grupos</a>  | <a href="bolao">Bolão</a>
-    <hr>
+  
+  <div class="menu">
+    <a href="grupos">Grupos</a>  | <a href="bolao">Bolão</a>  | <a href="login" (click)="logout()">Logout</a>
   </div>
+  <hr>
   
