--- a/src/app/bolao/bolao.component.scss
+++ b/src/app/bolao/bolao.component.scss
@@ -5,9 +5,10 @@ h1{
 }
 .group{
     border: 1px solid;
-    max-width: 400px;
+    min-width: 410px;
     float: left;
     margin: 10px;
     padding: 5px;
     box-shadow: 1px 1px 5px #a87b54;
+
 }
