--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,30 @@
-<form [formGroup]="myForm" (ngSubmit)="login()">
-  <div class="form-box">
-    <div class="header-text">
-      Identifique-se
+<div class="page">
+  <div class="container">
+    <div class="left">
+      <div class="login">Login</div>
+      <div class="eula">Informe seu e-mail e senha para fazer os seus palpites sobre os jogos da Copa do Mundo 2022
+      </div>
     </div>
-    <input placeholder="Email" type="text" formControlName="usuario">
-    <input placeholder="Senha" type="password" formControlName="senha">
-    <input type="submit" value="Entrar" />
+    <div class="right">
+      <svg viewBox="0 0 320 300">
+        <defs>
+          <linearGradient inkscape:collect="always" id="linearGradient" x1="13" y1="193.49992" x2="307" y2="193.49992"
+            gradientUnits="userSpaceOnUse">
+            <stop style="stop-color:#ff00ff;" offset="0" id="stop876" />
+            <stop style="stop-color:#ff0000;" offset="1" id="stop878" />
+          </linearGradient>
+        </defs>
+        <path
+          d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
+      </svg>
+      <form [formGroup]="myForm" (ngSubmit)="login()" class="form">
+        <label for="email">Email</label>
+        <input type="email" id="email" formControlName="usuario">
+        <label for="password">Senha</label>
+        <input type="password" id="password" formControlName="senha">
+        <input type="submit" id="submit" value="Entrar">
+        <label class="error">{{errorMessage}}</label>
+      </form>
+    </div>
   </div>
-</form>
+</div>
