--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,113 +1,140 @@
-* {
-	box-sizing: border-box;
-    font-family: Roboto;
-    color: #fff;
+@import url('https://rsms.me/inter/inter-ui.css');
+::selection {
+  background: #2D2F36;
 }
-:host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+::-webkit-selection {
+  background: #2D2F36;
+}
+::-moz-selection {
+  background: #2D2F36;
+}
 body {
-	font-family: Roboto;
-	font-size: 16px;
-	color: #fff;
+  font-family: 'Inter UI', sans-serif;
+  margin: 0;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
 }
-.form-box {
-	background-color: rgba(0, 0, 0, 0.5);
-	margin: auto auto;
-	padding: 40px;
-	border-radius: 5px;
-	box-shadow: 0 0 10px #000;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	width: 500px;
-	height: 430px;
+.page {
+  background-image: url('/assets/img/wallpaper.jpg');
+  background-repeat: no-repeat;
+  background-position: initial; /* Center the image */
+  background-color: #150c1e;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  place-content: center;  
+  width: 100%;
+  height: 100%;
 }
-.form-box:before {
-	background-image: url("/assets/img/wallpaper.jpg");
-	width: 100%;
-	height: 100%;
-	background-size: cover;
-	content: "";
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	z-index: -1;
-	display: block;
-	// filter: blur(2px);
+@media (max-width: 767px) {
+  .page {
+    height: auto;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+  }
 }
-.form-box .header-text {
-	font-size: 32px;
-	font-weight: 600;
-	padding-bottom: 30px;
-	text-align: center;
+.container {
+  display: flex;
+  height: 320px;
+  margin: 0 auto;
+  width: 640px;
+  padding-left: 364px;
 }
-.form-box input {
-	margin: 10px 0px;
-	border: none;
-	padding: 10px;
-	border-radius: 5px;
-	width: 100%;
-	font-size: 18px;
-	font-family: poppins;
+@media (max-width: 767px) {
+  .container {
+    flex-direction: column;
+    height: 630px;
+    width: 320px;
+  }
 }
-.form-box input[type=checkbox] {
-	display: none;
+.left {
+  background: white;
+  height: calc(100% - 40px);
+  top: 20px;
+  position: relative;
+  width: 50%;
 }
-.form-box input[type=text], input[type=password] {
-	color: #000;
+@media (max-width: 767px) {
+  .left {
+    height: 100%;
+    left: 20px;
+    width: calc(100% - 40px);
+    max-height: 270px;
+  }
 }
-.form-box label {
-	position: relative;
-	margin-left: 5px;
-	margin-right: 10px;
-	top: 5px;
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	cursor: pointer;
+.login {
+  font-size: 50px;
+  font-weight: 900;
+  margin: 50px 40px 40px;
 }
-.form-box label:before {
-	content: "";
-	display: inline-block;
-	width: 20px;
-	height: 20px;
-	border-radius: 5px;
-	position: absolute;
-	left: 0;
-	bottom: 1px;
-	background-color: #ddd;
+.eula {
+  color: #999;
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 40px;
 }
-.form-box input[type=checkbox]:checked+label:before {
-	content: "\2713";
-	font-size: 20px;
-	color: #000;
-	text-align: center;
-	line-height: 20px;
+.right {
+  background: #474A59;
+  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
+  color: #F1F1F2;
+  position: relative;
+  width: 50%;
 }
-.form-box span {
-	font-size: 14px;
+@media (max-width: 767px) {
+  .right {
+    flex-shrink: 0;
+    height: 100%;
+    width: 100%;
+    max-height: 350px;
+  }
 }
-.form-box input[type='submit'] {
-	background-color: #94183a;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	width: 100%;
-	font-size: 18px;
-	padding: 10px;
-	margin: 20px 0px;
+svg {
+  position: absolute;
+  width: 320px;
 }
-span a {
-	color: #BBB;
+path {
+  fill: none;
+  stroke: url(#linearGradient);;
+  stroke-width: 4;
+  stroke-dasharray: 240 1386;
+}
+.form {
+  margin: 40px;
+  position: absolute;
+}
+label {
+  color:  #c2c2c5;
+  display: block;
+  font-size: 14px;
+  height: 16px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+input {
+  background: transparent;
+  border: 0;
+  color: #f2f2f2;
+  font-size: 20px;
+  height: 30px;
+  line-height: 30px;
+  outline: none !important;
+  width: 100%;
+}
+input::-moz-focus-inner { 
+  border: 0; 
+}
+#submit {
+  color: #707075;
+  margin-top: 40px;
+  transition: color 300ms;
+}
+#submit:focus {
+  color: #f2f2f2;
+}
+#submit:active {
+  color: #d0d0d2;
+}
+.error{
+ margin-top: 30px;
 }
