--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -60,3 +60,24 @@
     margin: auto;
     padding: auto;
   }
+  .menu{
+    margin-top: 60px;
+    padding: 10px;
+    font-weight: 500;
+    
+  }
+  a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  a:active {
+    text-decoration: underline;
+  }
