--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+*, body{
+    margin: 0;
+    padding: 0;
+}
+hr{
+    border-top: 1px solid #000;
+}
